--- a/PvA/pva.tex
+++ b/PvA/pva.tex
@@ -156,6 +156,7 @@ Deze use cases zijn afgebeeld in de use case diagram in figuur 1.
     \includegraphics[width=0.7\textwidth]{images/iv_ucd.png}
     \caption{Use Case Diagram - Ingensche Veer}
 \end{figure}
+\pagebreak
 
 \subsection{Uitgangspunten, randvoorwaarden en aannames}
 De belangrijkste punten aan het project zijn dat de data die wordt weergegeven klopt en dat de webapplicatie zelf betrouwbaar is. De applicatie moet dus niet zomaar crashen als er klanten op een bepaalde knop drukken.
