--- a/PvA/pva.tex
+++ b/PvA/pva.tex
@@ -118,12 +118,12 @@ Dit zorgt simpelweg voor een betere doorloop en minder frustratie. Hierdoor zijn
     \item Lijst met recente overtochten.
 \end{enumerate}
 \subsubsection{Could Have}
-\begin{itemize}
+\begin{enumerate}
     \item Geschatte drukte op basis van historische data.
     \item Statistieken over snelheid van bepaalde schippers.
     \item Integratie met weersomstandigheden.
     \item Roosters van de veerschippers.
-\end{itemize}
+\end{enumerate}
 \subsubsection{Won't Have}
 \begin{enumerate}
     \item Offlinefunctionaliteiten.
@@ -134,20 +134,23 @@ Dit zorgt simpelweg voor een betere doorloop en minder frustratie. Hierdoor zijn
 \subsection{Op te leveren eindresultaat}
 
 Binnen twee sprints zal ik een functionele webapplicatie hebben ontwikkeld die klanten van de veerpont tussen Ingen en Elst in staat stelt om near-real time locatiegegevens van de veerpont te zien, de schipper om de drukte bij te houden en de baas om statistieken te analyseren, met beschikbaarheid van ten minste 95\%.
-Deze webapplicatie zal de volgende deliverables hebben:
+Deze webapplicatie zal de volgende deliverables en use cases hebben:
+\begin{tcolorbox}[colback=white, colframe=black, title=\textbf{Deliverables}]
 \begin{enumerate}
     \item Proof of Concept \\ Een systeem dat de locatie van de veerpont weergeeft, samen met wat extra informatie over de veerpont.
     \item Poster 
 \end{enumerate}
+\end{tcolorbox}
 
-Onder het proof of concept, ofwel de webapplicatie, vallen de volgende use cases:
+\begin{tcolorbox}[colback=white, colframe=black, title=\textbf{Use Cases}]
 \begin{enumerate}
     \item Als klant wil ik de huidige positie van de veerpont kunnen zien, zodat ik kan inschatten wanneer ik moet vertrekken om de veerpont op tijd te halen.
-    \item Als schipper wil ik kunnen bijhouden hoeveel autobanen vol zijn, zodat ik hiermee met de baas kan overleggen wanneer er extra hulp nodig is.
+    \item Als schipper wil ik kunnen bijhouden hoeveel autobanen vol zijn, zodat de baas weet wanneer hij hulp moet inschakelen.
     \item Als baas wil ik kunnen inzien welke schipper het snelst is, zodat ik hiermee rekening kan houden bij het inplannen van hulp.
     \item Als schipper wil ik mijn rooster kunnen in zien, zodat ik weet wanneer ik moet werken.
     \item Als baas wil ik het rooster van de schippers kunnen bijhouden, zodat schippers weten wanneer ze moeten werken.
 \end{enumerate}
+\end{tcolorbox}
 \par\smallskip
 Deze use cases zijn afgebeeld in de use case diagram in figuur 1.
 \begin{figure}[h]
